# flake8-pydocstyle

./: .coveragerc  .flake8  .gitignore  .pydocstyle  CHANGELOG.md  NOTICE  README-DEV.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg
.config/: .coveragerc  .flake8  .pydocstyle  mypy.ini  pytest.ini  ruff.toml
.github/workflows/: pr-checker.yml
flake8_pydocstyle/: __init__.py  generic_types.py  metadata.py  plugin.py
tests/: test_dummy.py  test_metadata.py  test_plugin.py
