[tool.poetry]
name = "flake8-pydocstyle"
version = "0.2.1"
description = "flake8 plugin that integrates pydocstyle"
authors = ["KRunchPL <krunchfrompoland@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KRunchPL/flake8-pydocstyle"
repository = "https://github.com/KRunchPL/flake8-pydocstyle"
documentation = "https://github.com/KRunchPL/flake8-pydocstyle"
license = "Apache-2.0"
packages = [
    { include = "flake8_pydocstyle" },
]

[tool.poetry.dependencies]
python = "^3.7"
pydocstyle = "^6.2"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-html = "^0.4.1"
flake8-isort = "^4.1.1"
flake8-todo = "^0.7"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
munch = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
D = "flake8_pydocstyle:Flake8PydocstylePlugin"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--cov flake8_pydocstyle --cov-report html:coverage-report --cov-config=setup.cfg"

[tool.isort]
virtual_env = ".venv"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 0
lines_between_sections = 1
lines_after_imports = 2
lines_before_imports = 0
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 110
force_grid_wrap = 0
ensure_newline_before_comments = true
combine_as_imports = true

[tool.mypy]
files = "."
exclude = "(^|/)tests/"
# Strict options
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # overridden from strict, because https://github.com/python/mypy/issues/8823
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
# Additional options
disallow_untyped_globals = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pydocstyle.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
strict_optional = false
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false

[tool.pydocstyle]
### Ignoring explanation
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D200 - One-line docstring should fit on one line with quotes
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line
ignore = """
D104,D107,
D200,D203,D212
"""
