[tool.poetry]
name = "flake8-pydocstyle"
version = "0.2.3"
description = "flake8 plugin that integrates pydocstyle"
authors = ["KRunchPL <krunchfrompoland@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KRunchPL/flake8-pydocstyle"
repository = "https://github.com/KRunchPL/flake8-pydocstyle"
documentation = "https://github.com/KRunchPL/flake8-pydocstyle"
license = "Apache-2.0"
packages = [
    { include = "flake8_pydocstyle" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydocstyle = "^6.3.0"

[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
flake8 = "^7.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
munch = "^4.0.0"
munch-stubs = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
D = "flake8_pydocstyle:Flake8PydocstylePlugin"


